src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AECOM_Participants__c</fullName>
        <label>AECOM Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Suite_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this meeting a C Suite Meeting? (Mostly for CAM)</description>
        <label>C Suite Meeting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_Suite_meeting_with_executive_sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added for CAM but can be used by anyone.</description>
        <label>C Suite meeting with executive sponsor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <inlineHelpText>Enter notes related to this event.</inlineHelpText>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <inlineHelpText>Select amount of time this task will require during this period.</inlineHelpText>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Full-time</fullName>
                <color>#000066</color>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
                <color>#AFCADF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <inlineHelpText>Select one</inlineHelpText>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Planning Task</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Implementation Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_Objective__c</fullName>
        <inlineHelpText>Enter tex</inlineHelpText>
        <label>Strategic Account Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Interaction__c</fullName>
        <label>Type of Interaction</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face-to-face meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>